Bug 803884 - Fold MControlInstructions. r=mjrosenb