js/src/ion/ValueNumbering.h
@@ -57,6 +57,7 @@ class ValueNumberer
     MDefinition *findDominatingDef(InstructionMap &defs, MDefinition *ins, size_t index);
 
     MDefinition *simplify(MDefinition *def, bool useValueNumbers);
+    MControlInstruction *simplifyControlInstruction(MControlInstruction *def);
     bool eliminateRedundancies();
 
     bool computeValueNumbers();
